apps/pkg-cache/resources/pacman-cache-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pacman-cache
spec:
  podSelector:
    matchLabels:
      app: pacman-cache
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 8080
          protocol: TCP
